# csv_to_dat

./: .gitignore  DAT_FORMAT.md  README.md  __init__.py  __main__.py  cli.py  converter.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
.gstack/qa-reports/: cli-matrix-results.txt  qa-pass2-results.txt  qa-report-2026-07-08.md  qa-report-pass2-2026-07-08.md  qa-report-pass3-2026-07-08.md  qa-report-pass4-2026-07-08.md  qa_pass2.py
schemas/: davila_load.txt  standard_native.txt
scripts/: build_concordance_volume.ps1  ci_test.ps1  enrich_volume.py
tests/: test_roundtrip.py
tests/fixtures/: VOL001_slice.csv
tests/fixtures/classic/: VOL001_slice_full_schema.dct  relativity_load_file_01_classic.dct
